--- a/index.html
+++ b/index.html
@@ -338,99 +338,107 @@
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/m64.png"><br>
+                            <img src="assets/img/nav_icon/m64.png" class="mb-2"><br>
                         MEAT</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/fh64i.png"><br>
+                            <img src="assets/img/nav_icon/fh64i.png" class="mb-2"><br>
                         FISH</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/vvvv.png"><br>
-                        VEGETABLE</p>
+                            <img src="assets/img/nav_icon/vvvv.png" class="mb-2"><br>
+                        VEGETABLES</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/f64i.png"><br>
+                            <img src="assets/img/nav_icon/f64i.png" class="mb-2"><br>
                         FRUITS</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/eee.png"><br>
+                            <img src="assets/img/nav_icon/eee.png" class="mb-2"><br>
                         EGG</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/sss.png"><br>
+                            <img src="assets/img/nav_icon/sss.png" class="mb-2"><br>
                         SNACKS</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/bbb.png"><br>
+                            <img src="assets/img/nav_icon/sd.png" class="mb-2"><br>
                         BEVERAGES</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/m64.png"><br>
+                            <img src="assets/img/nav_icon/m64.png" class="mb-2"><br>
                         MEAT</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/fh64i.png"><br>
+                            <img src="assets/img/nav_icon/fh64i.png" class="mb-2"><br>
                         FISH</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/vvvv.png"><br>
+                            <img src="assets/img/nav_icon/vvvv.png" class="mb-2"><br>
                         VEGETABLE</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/f64i.png"><br>
+                            <img src="assets/img/nav_icon/f64i.png" class="mb-2"><br>
                         FRUITS</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/eee.png"><br>
+                            <img src="assets/img/nav_icon/eee.png" class="mb-2"><br>
                         EGG</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/sss.png"><br>
+                            <img src="assets/img/nav_icon/sss.png" class="mb-2"><br>
                         SNACKS</p>
                     </a>
                 </div>
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="shadow-sm text-center">
-                            <img src="assets/img/nav_icon/bbb.png"><br>
+                            <img src="assets/img/nav_icon/bbb.png" class="mb-2"><br>
                         BEVERAGES</p>
+                    </a>
+                </div>
+
+                <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
+                    <a href="#">
+                        <p class="shadow-sm text-center">
+                            <img src="assets/img/nav_icon/bbb.png" class="mb-2"><br>
+                        BEAUTY & HEALTH</p>
                     </a>
                 </div>
 
