--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
                                 <div class="uk-navbar-center">
 
-                                    <ul class="uk-navbar-nav">
+                                    <ul class="uk-navbar-nav nav-middle">
                                         <li><a href="#">Home</a></li>
                                         <li><a href="#">All Products</a></li>
                                         <li><a href="#">New Products</a></li>
