--- a/index.html
+++ b/index.html
@@ -458,9 +458,13 @@
         <div class="uk-container">
             <div class="row">
 
-                <div class="text-center" style="margin-top: 20px; margin-bottom: 30px;">
-                    <h5 class="text-center">ALL PRODUCTS</h5>
-                    <a href="#" class="d-inline uk-badge uk-badge-success px-3 py-1 shadow-sm" style="background-color: #F99B0C;">See All</a>
+                <div>
+                    <div class="uk-float-left d-inline" style="margin-top: 20px; margin-bottom: 30px;">
+                        <h5>ALL PRODUCTS</h5>
+                    </div>
+                    <div class="uk-float-right d-inline" style="margin-top: 20px; margin-bottom: 30px;">
+                        <a href="#" class="uk-button shadow-sm" style="background-color: #F99B0C; color: #fff; border-radius: 25px;">See All <span uk-icon="icon: arrow-right"></span></a>
+                    </div>
                 </div>
 
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
