--- a/index.html
+++ b/index.html
@@ -869,7 +869,177 @@
             </div>
         </div>
     </section>
-    <!-- End category section -->
+    <!-- End newproduct section -->
+
+
+
+
+    <!-- Start brand section -->
+    <section id="brand-section" class="mt-4">
+        <div class="uk-container">
+            <div class="row">
+
+                <div class="text-center" style="margin-top: 20px; margin-bottom: 30px;">
+                    <h5 class="text-center">OUR BRANDS</h5>
+                    <a href="#" class="d-inline uk-badge uk-badge-success px-3 py-1 shadow-sm" style="background-color: #F99B0C;">See All</a>
+                </div>
+
+                <div class="uk-slider-container-offset mx-auto" uk-slider="autoplay: true; autoplay-interval: 2500; pause-on-hover: true;">
+
+                <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
+
+                    <div class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-child-width-1-5@l uk-child-width-1-5@xl uk-grid">
+                        <div>
+                            <a href="#">
+                                <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                                    <div class="uk-card-media-top">
+                                        <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">New</div>
+                                        <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/4/ZHjREDYR7Nk5owV7ncUfFnQwtOiSsqXUZpvbdWlf___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                                    </div>
+                                    <div class="uk-card-body mt-4 pt-0">
+                                        <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                                        <small class="text-muted">1KG</small>
+                                        <h6 style="color: #000;">TK 60.00</h6>
+
+                                        <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><span uk-icon="cart"></span> Add to Cart</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                                    <div class="uk-card-media-top">
+                                        <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">New</div>
+                                        <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/12/18/tupMwQ02qEVongk1adk64Nsmn33rsiEtwniirQB6___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                                    </div>
+                                    <div class="uk-card-body mt-4 pt-0">
+                                        <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                                        <small class="text-muted">1KG</small>
+                                        <h6 style="color: #000;">TK 60.00</h6>
+
+                                        <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                                    <div class="uk-card-media-top">
+                                        <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">New</div>
+                                        <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/10/ef6FPa2vyI7kuLxs36eodqkSGaDJdw0GG6L3NFRw___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                                    </div>
+                                    <div class="uk-card-body mt-4 pt-0">
+                                        <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                                        <small class="text-muted">1KG</small>
+                                        <h6 style="color: #000;">TK 60.00</h6>
+
+                                        <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                                    <div class="uk-card-media-top">
+                                        <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">New</div>
+                                        <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/3/30/7FXenA9r0EzeHmNnEDAgPLeftJ5SNqrCSnkRsPcI___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                                    </div>
+                                    <div class="uk-card-body mt-4 pt-0">
+                                        <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                                        <small class="text-muted">1KG</small>
+                                        <h6 style="color: #000;">TK 60.00</h6>
+
+                                        <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                                    <div class="uk-card-media-top">
+                                        <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">New</div>
+                                        <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/6/bvpK4U31TXbyC1mEQOfaJbRHS7geOivtxVzDD3Ec___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                                    </div>
+                                    <div class="uk-card-body mt-4 pt-0">
+                                        <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                                        <small class="text-muted">1KG</small>
+                                        <h6 style="color: #000;">TK 60.00</h6>
+
+                                        <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                                    <div class="uk-card-media-top">
+                                        <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">New</div>
+                                        <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/6/20/2LjmQQ5UA3NkzwZT4v03x4jttVge5Td7maoE1Udm___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                                    </div>
+                                    <div class="uk-card-body mt-4 pt-0">
+                                        <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                                        <small class="text-muted">1KG</small>
+                                        <h6 style="color: #000;">TK 60.00</h6>
+
+                                        <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                                    <div class="uk-card-media-top">
+                                        <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">New</div>
+                                        <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/10/2/QUcQX7LY4VbLxXTm1krLhewyZnoK10DmyJd33Naw___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                                    </div>
+                                    <div class="uk-card-body mt-4 pt-0">
+                                        <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                                        <small class="text-muted">1KG</small>
+                                        <h6 style="color: #000;">TK 60.00</h6>
+
+                                        <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
+                                    <div class="uk-card-media-top">
+                                        <div class="uk-card-badge uk-label" style="background-color: #2395F3; color: #fff; text-transform: capitalize;">New</div>
+                                        <img class="pt-4" src="https://s3-ap-southeast-1.amazonaws.com/com.meenabazaronline.v1.01/product/2023/5/29/5QkJTNQgNxATZ18EmB5rNj24JALmXBow59LqoOUZ___lg.webp" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
+                                    </div>
+                                    <div class="uk-card-body mt-4 pt-0">
+                                        <h6 style="color: #000;">Cabbage (বাঁধাকপি)</h6>
+                                        <small class="text-muted">1KG</small>
+                                        <h6 style="color: #000;">TK 60.00</h6>
+
+                                        <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <a class="uk-position-center-left uk-position-small" href uk-slidenav-previous uk-slider-item="previous" style="color: #7A7D7F;"></a>
+                    <a class="uk-position-center-right uk-position-small" href uk-slidenav-next uk-slider-item="next" style="color: #7A7D7F;"></a>
+
+                </div>
+
+                <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- End newproduct section -->
 
 
 
