--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         <h5>ALL PRODUCTS</h5>
                     </div>
                     <div class="uk-float-right d-inline" style="margin-top: 20px; margin-bottom: 30px;">
-                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #55CE60; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
+                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #28A745; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
                     </div>
                 </div>
 
@@ -888,7 +888,7 @@
                         <h5>OUR BRANDS</h5>
                     </div>
                     <div class="uk-float-right d-inline" style="margin-top: 20px; margin-bottom: 30px;">
-                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #55CE60; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
+                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #28A745; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
                     </div>
                 </div>
 
