--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-child-width-1-5@l uk-child-width-1-5@xl uk-grid">
             <div>
                 <a href="#">
-                    <div class="uk-card uk-card-default mb-3 uk-child-width-auto" style="border-radius: 3px;">
+                    <div class="uk-card uk-card-default mb-3" style="border-radius: 3px;">
                         <div class="uk-card-media-top">
                             <div class="uk-card-badge uk-label px-2" style="background-color: #28A745; color: #fff; text-transform: none; ">In Stock</div>
                             <img class="pt-4" src="https://static.vecteezy.com/system/resources/thumbnails/035/047/756/small_2x/ai-generated-high-quality-photo-of-fresh-green-cabbage-vegetable-png.png" width="400" height="400" alt="product-img" style="display: block; margin-left: auto; margin-right: auto; width: 70%;">
@@ -973,6 +973,54 @@
         </div>
     </section>
     <!-- End newproduct section -->
+
+
+
+
+    <!-- Start footer section -->
+    <footer id="footer-section" class="mt-4" style="background-color: #3a3939; color: #fff;">
+        <div class="uk-container">
+            <div class="footer-top">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-5 col-xl-5 mt-4">
+                        <div><h5><img src="assets/img/brand_img/f64i.png" width="45" alt="company_logo"> BAZAR LAGBE.</h5></div>
+                        <br>
+                        <p class="mb-1 pb-0">CONTACT US</p>
+                        <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 25px;"></div>
+                        <div>
+                            <p><span uk-icon="location"></span> <span> Al Falah Goli, 2 No. Gate, Chittagong, Bangladesh</span></p>
+                            <p><span uk-icon="receiver"></span> <span> +880 1831-144838</span></p>
+                            <p><span uk-icon="mail"></span> <span> bazarlagbectg@gmail.com</span></p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 mt-4">
+                        <p class="mb-1 pb-0">COMPANY</p>
+                        <div style="border-bottom: 2px solid #F99B0C; width: 10%;"></div>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 mt-4 ml-3">
+                        <p class="mb-1 pb-0">PAYMENT MATHOD</p>
+                        <div style="border-bottom: 2px solid #F99B0C; width: 10%;"></div>
+                        <p class="mt-3"><span uk-icon="location"></span> <span uk-icon="receiver"></span> <span uk-icon="receiver"></span></p>
+                        <br>
+                        <p class="mb-1 pb-0">FOLLOW US</p>
+                        <div style="border-bottom: 2px solid #F99B0C; width: 10%;"></div>
+                        <div class="mt-3">
+                            <a href="" class="uk-icon-button  uk-margin-small-right" uk-icon="facebook"></a>
+                            <a href="" class="uk-icon-button uk-margin-small-right" uk-icon="youtube"></a>
+                            <a href="" class="uk-icon-button uk-margin-small-right" uk-icon="instagram"></a>
+                            <a href="" class="uk-icon-button uk-margin-small-right" uk-icon="twitter"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="footer-bottom mt-4 py-2 uk-text-center" style="background-color: #28A745; color: #fff;">
+            <div>Copyright © 2024 | GROCERY All Rights Reserved.</div>
+        </div>
+    </footer>
+    <!-- End footer section -->
+
 
 
 
