--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
             
         </div>
         <div class="footer-bottom mt-4 py-2 uk-text-center" style="background-color: #28A745; color: #fff;">
-            <div>Copyright © 2024 | GROCERY All Rights Reserved.</div>
+            <div><span>Copyright © 2024 | GROCERY All Rights Reserved.</span></div>
         </div>
     </footer>
     <!-- End footer section -->
