--- a/index.html
+++ b/index.html
@@ -983,10 +983,10 @@
             <div class="footer-top">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-6 col-lg-5 col-xl-5 mt-4">
-                        <div><h5><img src="assets/img/brand_img/f64i.png" width="45" alt="company_logo"> BAZAR LAGBE.</h5></div>
+                        <div><h5><img src="assets/img/nav_icon/cart(1).png" width="45" alt="company_logo"> BAZAR LAGBE.</h5></div>
                         <br>
                         <p class="mb-1 pb-0">CONTACT US</p>
-                        <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 25px;"></div>
+                        <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
                         <div>
                             <p><span uk-icon="location"></span> <span> Al Falah Goli, 2 No. Gate, Chittagong, Bangladesh</span></p>
                             <p><span uk-icon="receiver"></span> <span> +880 1831-144838</span></p>
@@ -995,15 +995,15 @@
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 mt-4">
                         <p class="mb-1 pb-0">COMPANY</p>
-                        <div style="border-bottom: 2px solid #F99B0C; width: 10%;"></div>
+                        <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 mt-4 ml-3">
                         <p class="mb-1 pb-0">PAYMENT MATHOD</p>
-                        <div style="border-bottom: 2px solid #F99B0C; width: 10%;"></div>
+                        <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
                         <p class="mt-3"><span uk-icon="location"></span> <span uk-icon="receiver"></span> <span uk-icon="receiver"></span></p>
                         <br>
                         <p class="mb-1 pb-0">FOLLOW US</p>
-                        <div style="border-bottom: 2px solid #F99B0C; width: 10%;"></div>
+                        <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
                         <div class="mt-3">
                             <a href="" class="uk-icon-button  uk-margin-small-right" uk-icon="facebook"></a>
                             <a href="" class="uk-icon-button uk-margin-small-right" uk-icon="youtube"></a>
