--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
             <div class="footer-top">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-6 col-lg-5 col-xl-5 mt-4">
-                        <div><h5><img src="assets/img/nav_icon/cart(1).png" width="45" alt="company_logo"> BAZAR LAGBE.</h5></div>
+                        <div><h5><img src="assets/img/nav_icon/f64i.png" width="45" alt="company_logo"> BAZAR LAGBE.</h5></div>
                         <br>
                         <p class="mb-1 pb-0">CONTACT US</p>
                         <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
@@ -997,18 +997,24 @@
                         <p class="mb-1 pb-0">COMPANY</p>
                         <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 mt-4 ml-3">
-                        <p class="mb-1 pb-0">PAYMENT MATHOD</p>
-                        <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
-                        <p class="mt-3"><span uk-icon="location"></span> <span uk-icon="receiver"></span> <span uk-icon="receiver"></span></p>
-                        <br>
-                        <p class="mb-1 pb-0">FOLLOW US</p>
-                        <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
-                        <div class="mt-3">
-                            <a href="" class="uk-icon-button  uk-margin-small-right" uk-icon="facebook"></a>
-                            <a href="" class="uk-icon-button uk-margin-small-right" uk-icon="youtube"></a>
-                            <a href="" class="uk-icon-button uk-margin-small-right" uk-icon="instagram"></a>
-                            <a href="" class="uk-icon-button uk-margin-small-right" uk-icon="twitter"></a>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 mt-4">
+                        <div>
+                            <p class="mb-1 pb-0">PAYMENT METHOD</p>
+                            <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
+                            <div class="mt-3">
+                                <span><img src="https://static.vecteezy.com/system/resources/previews/030/740/487/non_2x/cash-on-delivery-logo-free-png.png" width="55" style="background-color: #fff; border-radius: 2px; padding: 3px 5px;"></span>
+                                <span><img src="https://freepnglogo.com/images/all_img/1701541855%E0%A6%AC%E0%A6%BF%E0%A6%95%E0%A6%BE%E0%A6%B6-%E0%A6%B2%E0%A6%97%E0%A7%8B.png" width="60" style="background-color: #fff; border-radius: 2px; padding: 5px 5px;"></span>
+                                <span><img src="https://download.logo.wine/logo/Nagad/Nagad-Logo.wine.png" width="60" style="background-color: #fff; border-radius: 2px; padding: 0px 5px;"></span>
+                            </div>
+                        </div>
+                        <div>
+                            <p class="mb-1 pb-0 mt-4">FOLLOW US</p>
+                            <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
+                            <div class="mt-3">
+                                <a href="#"><img src="assets/img/social/facebook.png" width="32" alt="facebook"></a>
+                                <a href="#"><img src="assets/img/social/youtube.png" width="32" alt="youtube"></a>
+                                <a href="#"><img src="assets/img/social/instagram.png" width="32" alt="instagram"></a>
+                            </div>
                         </div>
                     </div>
                 </div>
