--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <div uk-navbar>
 
                                 <div class="uk-navbar-left">
-                                    <a class="uk-navbar-item uk-logo" href="#" aria-label="Back to Home"><img src="assets/img/logo.PNG" width="150"></a>
+                                    <a class="uk-navbar-item uk-logo" href="#" aria-label="Back to Home"><img src="assets/img/logo.PNG" width="180"></a>
                                 </div>
                                 <div class="uk-navbar-center">
                                      <div class="uk-navbar-item">
@@ -469,7 +469,7 @@
 
     <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
 
-        <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-child-width-1-4@l uk-child-width-1-5@xl uk-grid">
+        <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-child-width-1-5@l uk-child-width-1-5@xl uk-grid-small uk-grid-match" uk-grid>
             <div>
                 <a href="#">
                     <div class="uk-card uk-card-default mb-3 mr-0 ml-0" style="border-radius: 3px;">
@@ -479,12 +479,12 @@
                         </div>
                         <div class="uk-card-body mt-4 pt-0 pb-4">
                             <h6 style="color: #000; white-space: nowrap; overflow: hidden;
-  text-overflow: ellipsis;">Cabbage (বাঁধাকপি)</h6>
+  text-overflow: ellipsis; font-size: 15px;">Cabbage (বাঁধাকপি)</h6>
                             <small class="text-muted">1KG</small><br>
                             <p class="d-inline text-muted" style="font-size: 13px;"><del>TK 65.00 </del></p><h6 class="d-inline" style="color: #000; white-space: nowrap; overflow: hidden;
   text-overflow: ellipsis;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
