--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 </head>
 <body>
 
+
+    <div class="uk-text-center py-1" style="background-color: #FFC310; color: #fff;">
+        <span class="mb-0"><i class="fa fa-phone fa-fw"></i><i class="fa fa-whatsapp fa-fw"></i> Call Us: <a href="tel:+880 1831-144838" style="text-decoration: none; color: #fff;">+880 1831-144838</a> <small style="color: #696969;">[8:00 AM - 10:00 PM]</small></span>
+    </div>
+
     <!-- start top nav -->
     <section id="top-navbar">
         <div class="uk-container-large">
