--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
 
 
-    <div class="uk-text-center py-1" style="background-color: #FFC310; color: #fff;">
-        <span class="mb-0"><i class="fa fa-phone fa-fw"></i><i class="fa fa-whatsapp fa-fw"></i> Call Us: <a href="tel:+880 1831-144838" style="text-decoration: none; color: #fff;">+880 1831-144838</a> <small style="color: #696969;">[8:00 AM - 10:00 PM]</small></span>
+    <div class="top-call uk-text-center py-1" style="background-color: #FFC310; color: #fff;">
+        <span class="mb-0"><i class="fa fa-phone fa-fw"></i><i class="fa fa-whatsapp fa-fw"></i> Call Us: <a href="tel:+880 1831-144838" style="text-decoration: none; color: #fff;">01831-144838</a> <small style="background-color: #696969; color: #000;" class="uk-badge mb-1">8am-10pm</small></span>
     </div>
 
     <!-- start top nav -->
@@ -37,40 +37,24 @@
                             <div uk-navbar>
 
                                 <div class="uk-navbar-left">
-                                    <a class="uk-navbar-item uk-logo" href="#" aria-label="Back to Home"><img src="assets/img/logo.PNG" width="180"></a>
+                                    <a class="uk-navbar-item uk-logo mt-1" href="#" aria-label="Back to Home"><img src="assets/img/logo.PNG" width="180"></a>
                                 </div>
                                 <div class="uk-navbar-center">
                                      <div class="uk-navbar-item">
                                         <div class="uk-margin">
-                                            <form class="uk-search uk-search-default" style="width: 500px;">
+                                            <form class="uk-search uk-search-default" style="width: 350px;">
                                                 <span class="uk-search-icon" uk-search-icon></span>
                                                 <input class="uk-search-input" type="search" placeholder="Search for products..." aria-label="Search" style="border-radius: 30px;">
-                                                
                                             </form>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="uk-navbar-right">
                                     <ul class="uk-navbar-nav">
-                                        <li>
-                                            <div class="uk-inline mt-3">
-                                                <a href="#" style="text-decoration: none;"><img src="assets/img/nav_icon/help.png"><span style="margin-left: 5px; font-size: 11px; color: #FFA012;">HELP LINE</span></a>
-                                                <div uk-dropdown="animation: slide-top; animate-out: true; duration: 700" style="width: 250px; border-radius: 3px;">
-                                                    <ul class="uk-nav uk-dropdown-nav">
-                                                        <li><a href="#"><i class="fa fa-phone fa-fw" style=""></i> Call Us: +880 1831-144838</a></li>
-                                                        <hr class="my-2">
-                                                        <li><a href="#"><i class="fa fa-shopping-basket fa-fw" style=""></i> Our outlet</a></li>
-                                                        <hr class="my-2">
-                                                        <li><a href="#"><i class="fa fa-gift fa-fw" style=""></i> Offers<span class="uk-badge" style="background-color: #55CE60">3</span></a></li>
-                                                        <hr class="my-2">
-                                                        <li><a href="#"><i class="fa fa-question-circle-o fa-fw" style=""></i> FAQ</a></li>
-                                                        <hr class="my-2">
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li><a href="#"><img src="assets/img/nav_icon/offer.png" uk-tooltip="title: Offers; pos: top"><sup><span class="uk-badge" style="background-color: #55CE60;">3</span></sup></a></li></a></li>
-                                        <li><a href="#"><img src="assets/img/nav_icon/user.png" uk-tooltip="title: Login; pos: top" class="img_user"></a></li></a></li>
+                                        <li><a href="#" style="text-transform: capitalize;"><span uk-icon="cart"></span> Our Outlet</a></li>
+                                        <li><a href="#" style="text-transform: capitalize;"><span uk-icon="tag"></span> Offers<span class="uk-badge" style="background-color: #0FCD5B;">3</span></a></li>
+                                        <li><a href="#" style="text-transform: capitalize;"><span uk-icon="question"></span> FAQ</a></li>
+                                        <li><a href="#" style="text-transform: capitalize;"><span uk-icon="user"></span> Login</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -229,6 +213,7 @@
                                         <li><a href="#">ALL PRODUCTS</a></li>
                                         <li><a href="#">NEW PRODUCTS</a></li>
                                         <li><a href="#">OUR BRANDS</a></li>
+                                        <li><a href="#">CONTACT US</a></li>
                                     </ul>
                                 </div>
 
@@ -266,12 +251,12 @@
                                                     </div>
 
                                                     <div class="uk-text-center">
-                                                        <p style="color: #000; border: 1px solid #000; padding: 10px 15px 10px; border-radius: 3px; margin-top: 20px;">Subtotal: <img src="assets/img/nav_icon/taka (1).png"> <b>1350</b></p>
+                                                        <p style="color: #000; border: 1px solid #000; padding: 10px 15px 10px; border-radius: 3px; margin-top: 20px;">Subtotal: <b>1350 Tk.</b></p>
                                                     </div>
 
 
-                                                            <a class="uk-button uk-width-1-1 uk-margin-small-bottom" href="#" style="background-color: #55CE60; color: #fff; border-radius: 3px; text-transform: capitalize;">View Cart</a>
-                                                            <a class="uk-button uk-width-1-1 uk-margin-small-bottom" href="#" style="border: 1px solid #FFA012; color: #FFA012; border-radius: 3px; text-transform: capitalize;">Checkout <i class="fa fa-long-arrow-right fa-fw"></i></a>
+                                                            <a class="uk-button uk-width-1-1 uk-margin-small-bottom" href="#" style="background-color: #0FCD5B; color: #fff; border-radius: 3px; text-transform: capitalize;">View Cart</a>
+                                                            <a class="uk-button uk-width-1-1 uk-margin-small-bottom" href="#" style="background-color: #FFA012; color: #fff; border-radius: 3px; text-transform: capitalize;">Proceed to Checkout <i class="fa fa-long-arrow-right fa-fw"></i></a>
 
 
                                                 </div>
