--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
 
-    <div class="top-call uk-text-center py-1" style="background-color: #FFC310; color: #fff;">
+    <div class="top-call uk-text-center py-2 py-sm-2 py-lg-1" style="background-color: #FFC310; color: #fff;">
         <span class="mb-0"><i class="fa fa-phone fa-fw"></i><i class="fa fa-whatsapp fa-fw"></i> Call Us: <a href="tel:+880 1831-144838" style="text-decoration: none; color: #fff;">01831-144838</a> <small style="background-color: #696969; color: #000;" class="uk-badge mb-1">8am-10pm</small></span>
     </div>
 
@@ -453,7 +453,7 @@
                         <h5>ALL PRODUCTS</h5>
                     </div>
                     <div class="uk-float-right d-inline" style="margin-top: 20px; margin-bottom: 30px;">
-                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #28A745; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
+                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #0FCD5B; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
                     </div>
                 </div>
 
@@ -473,7 +473,7 @@
                             <small class="text-muted">1KG</small><br>
                             <p class="d-inline text-muted" style="font-size: 13px;"><del>TK 65.00 </del></p><h6 class="d-inline" style="color: #000;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -490,7 +490,7 @@
                             <small class="text-muted">Each</small>
                             <h6 style="color: #000;">TK 820.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -507,7 +507,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 650.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -524,7 +524,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -541,7 +541,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -558,7 +558,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -575,7 +575,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -592,7 +592,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -610,7 +610,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -627,7 +627,7 @@
                             <small class="text-muted">Each</small>
                             <h6 style="color: #000;">TK 820.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -644,7 +644,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 650.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -661,7 +661,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -678,7 +678,7 @@
                             <small class="text-muted">1KG</small>
                             <h6 style="color: #000;">TK 60.00</h6>
 
-                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 25px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
+                            <a href="#" class="uk-button mt-2" style="background-color: #F99B0C; text-transform: capitalize; border-radius: 2px; width: 100%; font-size: 13px;"><i class="fa fa-shopping-basket fa-fw"></i> Add to Cart</a>
                         </div>
                     </div>
                 </a>
@@ -706,7 +706,7 @@
                         <h5>NEW PRODUCTS</h5>
                     </div>
                     <div class="uk-float-right d-inline" style="margin-top: 20px; margin-bottom: 30px;">
-                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #28A745; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
+                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #0FCD5B; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
                     </div>
                 </div>
 
@@ -880,7 +880,7 @@
                         <h5>OUR BRANDS</h5>
                     </div>
                     <div class="uk-float-right d-inline" style="margin-top: 20px; margin-bottom: 30px;">
-                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #28A745; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
+                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #0FCD5B; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
                     </div>
                 </div>
 
