--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                                 <div class="uk-navbar-left" style="">
                                     <ul class="uk-navbar-nav">
                                         <li>
-                                            <div class="uk-inline" style="margin-top: 4px; color: #fff; color: #FFF; background-color: #0FCD5B; padding-top: 10px; padding-bottom: 10px; border-radius: 3px;">
+                                            <div class="uk-inline" style="margin-top: 5px; color: #fff; color: #FFF; background-color: #0FCD5B; padding-top: 10px; padding-bottom: 10px; border-radius: 3px;">
                                                 <a href="#" style=" text-decoration: none; color: #fff;"><span uk-icon="menu" style="margin-left: 15px; margin-right: 5px;"></span> Select Category<span uk-drop-parent-icon style="margin-right: 15px; margin-left: 45px; color: #fff;"></span></a>
-                                                <div class="uk-navbar-dropdown" uk-drop="mode: click; animation: slide-top; animate-out: true; duration: 700" delay-hide="100" style="width: 280px; border-radius: 3px;">
+                                                <div class="uk-navbar-dropdown" uk-drop="mode: hover; animation: slide-top; animate-out: true; duration: 500" delay-hide="100" style="width: 280px; border-radius: 3px;">
                                                     <ul class="uk-nav uk-navbar-dropdown-nav">
                                                         
 
@@ -207,7 +207,6 @@
                                 </div>
 
                                 <div class="uk-navbar-center">
-
                                     <ul class="uk-navbar-nav nav-middle" style="margin-top: 25px;">
                                         <li><a href="#">HOME</a></li>
                                         <li><a href="#">ALL PRODUCTS</a></li>
@@ -217,11 +216,10 @@
                                     </ul>
                                 </div>
 
-                                <div class="uk-navbar-right" style="background-color: #E9ECEF;">
-
+                                <div class="uk-navbar-right">
                                     <ul class="uk-navbar-nav">
                                         <li style="margin-top: 10px;">
-                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/nav_icon/cart(1).png" uk-tooltip="title: Cart; pos: bottom" style="margin-left: 20px;"><span class="uk-badge" style="margin-right: 20px; background-color: #696969; padding: 10px 10px 10px 10px;">3 Items</span></a>
+                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/cart-4.png" uk-tooltip="title: Cart; pos: bottom" ><sup><span class="uk-badge" style="background-color: #696969;">3</span></sup></a>
                                             <div id="offcanvas-flip" uk-offcanvas="flip: true; overlay: true">
                                                 <div class="uk-offcanvas-bar"  style="background-color: #fff; color: #000;">
                                                     <button class="uk-offcanvas-close" type="button" uk-close style="color: #000;"></button>
