--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <div class="uk-navbar-right">
                                     <ul class="uk-navbar-nav">
                                         <li><a href="#" style="text-transform: capitalize;"><span uk-icon="cart"></span> Our Outlet</a></li>
-                                        <li><a href="#" style="text-transform: capitalize;"><span uk-icon="tag"></span> Offers<span class="uk-badge" style="background-color: #0FCD5B;">3</span></a></li>
+                                        <li><a href="#" style="text-transform: capitalize;"><span uk-icon="tag"></span> Offers<span class="uk-badge" style="background-color: #F99B0C;">3</span></a></li>
                                         <li><a href="#" style="text-transform: capitalize;"><span uk-icon="question"></span> FAQ</a></li>
                                         <li><a href="#" style="text-transform: capitalize;"><span uk-icon="user"></span> Login</a></li>
                                     </ul>
@@ -218,8 +218,8 @@
 
                                 <div class="uk-navbar-right">
                                     <ul class="uk-navbar-nav">
-                                        <li style="margin-top: 10px;">
-                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/cart-4.png" uk-tooltip="title: Cart; pos: bottom" ><sup><span class="uk-badge" style="background-color: #696969;">3</span></sup></a>
+                                        <li style="">
+                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/basket.png" uk-tooltip="title: Cart; pos: bottom"><sup><span class="uk-badge" style="background-color: #0FCD5B;">3</span></sup></a>
                                             <div id="offcanvas-flip" uk-offcanvas="flip: true; overlay: true">
                                                 <div class="uk-offcanvas-bar"  style="background-color: #fff; color: #000;">
                                                     <button class="uk-offcanvas-close" type="button" uk-close style="color: #000;"></button>
