--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <div class="uk-navbar-right">
                                     <ul class="uk-navbar-nav">
                                         <li style="">
-                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/basket.png" uk-tooltip="title: Cart; pos: bottom"><sup><span class="uk-badge" style="background-color: #0FCD5B;">3</span></sup></a>
+                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/cart-5.png" uk-tooltip="title: Cart; pos: bottom" width="32"><sup><span class="uk-badge" style="background-color: #0FCD5B;">3</span></sup></a>
                                             <div id="offcanvas-flip" uk-offcanvas="flip: true; overlay: true">
                                                 <div class="uk-offcanvas-bar"  style="background-color: #fff; color: #000;">
                                                     <button class="uk-offcanvas-close" type="button" uk-close style="color: #000;"></button>
