--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <div class="uk-navbar-right">
                                     <ul class="uk-navbar-nav">
                                         <li style="">
-                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/cart-5.png" uk-tooltip="title: Cart; pos: bottom" width="32"><sup><span class="uk-badge" style="background-color: #0FCD5B;">3</span></sup></a>
+                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/basket-7.png" uk-tooltip="title: Cart; pos: bottom" width="32"><sup><span class="uk-badge" style="background-color: #0FCD5B;">3</span></sup></a>
                                             <div id="offcanvas-flip" uk-offcanvas="flip: true; overlay: true">
                                                 <div class="uk-offcanvas-bar"  style="background-color: #fff; color: #000;">
                                                     <button class="uk-offcanvas-close" type="button" uk-close style="color: #000;"></button>
@@ -973,7 +973,7 @@
             <div class="footer-top">
                 <div class="row">
                     <div class="col-12 col-sm-12 col-md-6 col-lg-5 col-xl-5 mt-4">
-                        <div><h5><img src="assets/img/nav_icon/f64i.png" width="45" alt="company_logo"> BAZAR LAGBE.</h5></div>
+                        <div><h5><img src="assets/img/logo.PNG" width="180" style="border-radius: 3px;"></h5></div>
                         <br>
                         <p class="mb-1 pb-0">CONTACT US</p>
                         <div style="border-bottom: 2px solid #F99B0C; width: 10%; margin-bottom: 20px;"></div>
