--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <div class="uk-navbar-right">
                                     <ul class="uk-navbar-nav">
                                         <li><a href="#" style="text-transform: capitalize;"><span uk-icon="cart"></span> Our Outlet</a></li>
-                                        <li><a href="#" style="text-transform: capitalize;"><span uk-icon="tag"></span> Offers<span class="uk-badge" style="background-color: #F99B0C;">3</span></a></li>
+                                        <li><a href="#" style="text-transform: capitalize;"><span uk-icon="tag"></span> Offers<span class="uk-badge" style="background-color: #0FCD5B;">3</span></a></li>
                                         <li><a href="#" style="text-transform: capitalize;"><span uk-icon="question"></span> FAQ</a></li>
                                         <li><a href="#" style="text-transform: capitalize;"><span uk-icon="user"></span> Login</a></li>
                                     </ul>
@@ -219,7 +219,7 @@
                                 <div class="uk-navbar-right">
                                     <ul class="uk-navbar-nav">
                                         <li style="">
-                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/basket-7.png" uk-tooltip="title: Cart; pos: bottom" width="32"><sup><span class="uk-badge" style="background-color: #0FCD5B;">3</span></sup></a>
+                                            <a href="#" uk-toggle="target: #offcanvas-flip"><img src="assets/img/basket-7.png" uk-tooltip="title: Cart; pos: bottom" width="32"><sup><span class="uk-badge" style="background-color: #696969;">3</span></sup></a>
                                             <div id="offcanvas-flip" uk-offcanvas="flip: true; overlay: true">
                                                 <div class="uk-offcanvas-bar"  style="background-color: #fff; color: #000;">
                                                     <button class="uk-offcanvas-close" type="button" uk-close style="color: #000;"></button>
@@ -319,7 +319,7 @@
     <section id="category-section" class="mt-4 mcx-auto">
         <div class="uk-container">
             <div class="row">
-                <h5 class="mt-3 mb-4"><span class="uk-badge px-2" style="background-color: #F99B0C;">Shop By</span> Categories</h5> 
+                <h5 class="mt-3 mb-4"><span class="uk-badge px-2" style="background-color: #F99B0C;">SHOP BY</span> CATEGORY</h5> 
 
 
 
