--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <section id="category-section" class="mt-4 mcx-auto">
         <div class="uk-container">
             <div class="row">
-                <h5 class="mt-3 mb-4"><span class="uk-badge px-2" style="background-color: #F99B0C;">SHOP BY</span> CATEGORY</h5> 
+                <h5 class="mt-2 mb-4"><span class="uk-badge px-2 mb-1" style="background-color: #F99B0C;">SHOP BY</span> CATEGORY</h5> 
 
 
 
