--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
             <h5 class="mt-2 mb-2"><span class="uk-badge px-2 mb-1" style="background-color: #F99B0C; border-radius: 3px;">SHOP BY</span> CATEGORY</h5>
 
-            <div class="row pt-3" style="background-color: #fff;">
+            <div class="row pt-3" style="background-color: #fff; border-radius: 3px;">
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
                         <p class="uk-text-center"><img src="assets/img/meat.png" src="assets/img/seafood.png" class="mb-2"><br>
@@ -400,8 +400,8 @@
             <div class="row">
 
                 <div>
-                    <div class="uk-float-left d-inline" style="margin-top: 20px; margin-bottom: 30px;">
-                        <h5>ALL PRODUCTS</h5>
+                    <div class="uk-float-left d-inline" style="margin-top: 20px; margin-bottom: 30px; border-left: 3px solid #FFC310;">
+                        <h5 style="margin-left: 10px;">ALL PRODUCTS</h5>
                     </div>
                     <div class="uk-float-right d-inline" style="margin-top: 20px; margin-bottom: 30px;">
                         <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #0FCD5B; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
