--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
                 <div class="col-4 col-sm-3 col-md-2 col-lg-2 col-xl-2">
                     <a href="#">
-                        <p class="uk-text-center"><img src="assets/img/Egg.png" class="mb-2"><br>
+                        <p class="uk-text-center"><img src="assets/img/egg.png" class="mb-2"><br>
                         <span style="font-weight: 500;">Egg</span><br>
                         <small style="font-size: 12px; color: #919191;">32 Items</small>
                         </p>
