--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 
         <div class="uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-child-width-1-5@l uk-child-width-1-5@xl uk-grid-small uk-grid-match" uk-grid>
             <div>
-                <a href="#">
+                <a href="product.html">
                     <div class="uk-card uk-card-default mr-0 ml-0" style="border-radius: 3px;">
                         <div class="uk-card-media-top">
                             <div class="uk-card-badge uk-label px-2" style="background-color: #28A745; color: #fff; text-transform: none;">In Stock</div>
