--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                         <h5 style="margin-left: 10px;">ALL PRODUCTS</h5>
                     </div>
                     <div class="uk-float-right d-inline" style="margin-top: 20px; margin-bottom: 30px;">
-                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #0FCD5B; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
+                        <a href="allproducts.html" class="uk-button uk-button-small shadow-sm" style="background-color: #0FCD5B; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
                     </div>
                 </div>
 
@@ -657,7 +657,7 @@
                         <h5>NEW PRODUCTS</h5>
                     </div>
                     <div class="uk-float-right d-inline" style="margin-top: 20px; margin-bottom: 30px;">
-                        <a href="#" class="uk-button uk-button-small shadow-sm" style="background-color: #0FCD5B; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
+                        <a href="newproducts.html" class="uk-button uk-button-small shadow-sm" style="background-color: #0FCD5B; color: #fff; border-radius: 2px; text-transform: capitalize;">See All <span uk-icon="icon: arrow-right"></span></a>
                     </div>
                 </div>
 
